--- a/src/main/webapp/Paginas/categoria/Create.xhtml
+++ b/src/main/webapp/Paginas/categoria/Create.xhtml
@@ -13,7 +13,9 @@
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{categoriaController.selected != null}">
                         <p:outputLabel value="Nombre de categoria: " for="nombre" />
-                        <p:inputText class="form-control" id="nombre" value="#{categoriaController.selected.nombre}" title="#{bundle.CreateCategoriaTitle_nombre}" required="true" requiredMessage="#{bundle.CreateCategoriaRequiredMessage_nombre}"/>
+                        <p:inputText class="form-control" id="nombre" value="#{categoriaController.selected.nombre}" title="#{bundle.CreateCategoriaTitle_nombre}" required="true" requiredMessage="#{bundle.CreateCategoriaRequiredMessage_nombre}">
+                                   <f:validator validatorId="letrasValidator" />
+                                        </h:inputText> 
                     </p:panelGrid>
                     <center>
                         <p:commandButton class="btn btn-outline-success" actionListener="#{categoriaController.create}" value="Guardar" update="display,:CategoriaListForm:datalist,:growl" oncomplete="handleSubmit(args,'CategoriaCreateDialog');"/>
