--- a/src/main/webapp/Paginas/cliente/Create.xhtml
+++ b/src/main/webapp/Paginas/cliente/Create.xhtml
@@ -15,19 +15,31 @@
                         <p:outputLabel value="#{bundle.CreateClienteLabel_empresa}" for="empresa" />
                         <p:inputText class="form-control" id="empresa" value="#{clienteController.selected.empresa}" title="#{bundle.CreateClienteTitle_empresa}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_empresa}"/>
                         <p:outputLabel value="Nombre del contacto: " for="nombreContacto" />
-                        <p:inputText class="form-control" id="nombreContacto" value="#{clienteController.selected.nombreContacto}" title="#{bundle.CreateClienteTitle_nombreContacto}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_nombreContacto}"/>
+                        <p:inputText class="form-control" id="nombreContacto" value="#{clienteController.selected.nombreContacto}" title="#{bundle.CreateClienteTitle_nombreContacto}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_nombreContacto}">
+                             <f:validator validatorId="letrasValidator" />
+                                        </h:inputText> 
                         <p:outputLabel value="#{bundle.CreateClienteLabel_area}" for="area" />
-                        <p:inputText class="form-control" id="area" value="#{clienteController.selected.area}" title="#{bundle.CreateClienteTitle_area}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_area}"/>
+                        <p:inputText class="form-control" id="area" value="#{clienteController.selected.area}" title="#{bundle.CreateClienteTitle_area}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_area}">
+                             <f:validator validatorId="letrasValidator" />
+                                        </h:inputText> 
                         <p:outputLabel value="#{bundle.CreateClienteLabel_telefono}" for="telefono" />
-                        <p:inputText class="form-control" id="telefono" value="#{clienteController.selected.telefono}" title="#{bundle.CreateClienteTitle_telefono}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_telefono}"/>
+                        <p:inputText class="form-control" id="telefono" value="#{clienteController.selected.telefono}" title="#{bundle.CreateClienteTitle_telefono}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_telefono}">
+                                <f:validator validatorId="telefonoValidator" />
+                                        </h:inputText>
                         <p:outputLabel value="#{bundle.CreateClienteLabel_rfc}" for="rfc" />
-                        <p:inputText class="form-control" id="rfc" value="#{clienteController.selected.rfc}" title="#{bundle.CreateClienteTitle_rfc}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_rfc}"/>
+                        <p:inputText class="form-control" id="rfc" value="#{clienteController.selected.rfc}" title="#{bundle.CreateClienteTitle_rfc}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_rfc}">
+                               <f:validator validatorId="rfcValidator" />
+                                        </h:inputText>
                         <p:outputLabel value="#{bundle.CreateClienteLabel_email}" for="email" />
-                        <p:inputText class="form-control" id="email" value="#{clienteController.selected.email}" title="#{bundle.CreateClienteTitle_email}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_email}"/>
+                        <p:inputText class="form-control" id="email" value="#{clienteController.selected.email}" title="#{bundle.CreateClienteTitle_email}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_email}">
+                               <f:validator validatorId="emailValidator" />
+                                        </h:inputText>
                         <p:outputLabel value="#{bundle.CreateClienteLabel_activo}" for="activo" />
                         <p:selectBooleanCheckbox class="form-check" id="activo" value="#{clienteController.selected.activo}" required="true" requiredMessage="#{bundle.EditClienteRequiredMessage_activo}"/>
                         <p:outputLabel value="Pagina web: " for="paginaWeb" />
-                        <p:inputText class="form-control" id="paginaWeb" value="#{clienteController.selected.paginaWeb}" title="#{bundle.CreateClienteTitle_paginaWeb}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_paginaWeb}"/>
+                        <p:inputText class="form-control" id="paginaWeb" value="#{clienteController.selected.paginaWeb}" title="#{bundle.CreateClienteTitle_paginaWeb}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_paginaWeb}">
+                                <f:validator validatorId="urlValidator" />
+                                        </h:inputText>
                         <p:outputLabel value="Domicilio Fiscal: " for="domicilioFiscal" />
                         <p:inputText class="form-control" id="domicilioFiscal" value="#{clienteController.selected.domicilioFiscal}" title="#{bundle.CreateClienteTitle_domicilioFiscal}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_domicilioFiscal}"/>
                     </p:panelGrid>
