--- a/src/main/webapp/Paginas/categoria/Create.xhtml
+++ b/src/main/webapp/Paginas/categoria/Create.xhtml
@@ -15,7 +15,7 @@
                         <p:outputLabel value="Nombre de categoria: " for="nombre" />
                         <p:inputText class="form-control" id="nombre" value="#{categoriaController.selected.nombre}" title="#{bundle.CreateCategoriaTitle_nombre}" required="true" requiredMessage="#{bundle.CreateCategoriaRequiredMessage_nombre}">
                                    <f:validator validatorId="letrasValidator" />
-                                        </h:inputText> 
+                                        </p:inputText> 
                     </p:panelGrid>
                     <center>
                         <p:commandButton class="btn btn-outline-success" actionListener="#{categoriaController.create}" value="Guardar" update="display,:CategoriaListForm:datalist,:growl" oncomplete="handleSubmit(args,'CategoriaCreateDialog');"/>
