--- a/src/main/webapp/Paginas/compradetalle/Create.xhtml
+++ b/src/main/webapp/Paginas/compradetalle/Create.xhtml
@@ -15,15 +15,15 @@
                         <p:outputLabel value="#{bundle.CreateCompradetalleLabel_cantidad}" for="cantidad" />
                         <p:inputText class="form-control" id="cantidad" value="#{compradetalleController.selected.cantidad}" title="#{bundle.CreateCompradetalleTitle_cantidad}" required="true" requiredMessage="#{bundle.CreateCompradetalleRequiredMessage_cantidad}">
                                <f:validator validatorId="numerosValidator" />
-                                        </h:inputText> 
+                                        </p:inputText> 
                         <p:outputLabel value="Precio Unitario $: " for="precioUnitario" />
                         <p:inputText class="form-control" id="precioUnitario" value="#{compradetalleController.selected.precioUnitario}" title="#{bundle.CreateCompradetalleTitle_precioUnitario}" required="true" requiredMessage="#{bundle.CreateCompradetalleRequiredMessage_precioUnitario}">
                                <f:validator validatorId="numerosValidator" />
-                                        </h:inputText> 
+                                        </p:inputText> 
                         <p:outputLabel value="#{bundle.CreateCompradetalleLabel_importe}" for="importe" />
                         <p:inputText class="form-control" id="importe" value="#{compradetalleController.selected.importe}" title="#{bundle.CreateCompradetalleTitle_importe}" required="true" requiredMessage="#{bundle.CreateCompradetalleRequiredMessage_importe}">
                                <f:validator validatorId="numerosValidator" />
-                                        </h:inputText> 
+                                        </p:inputText> 
                         <p:outputLabel value="Orden de compra:" for="ordencompra" />
                         <p:selectOneMenu class="form-text" id="ordencompra" value="#{compradetalleController.selected.ordencompra}" required="true" requiredMessage="#{bundle.EditCompradetalleRequiredMessage_ordencompra}">
                             <f:selectItems value="#{ordencompraController.itemsAvailableSelectOne}"
