--- a/src/main/webapp/Paginas/facturaventa/Create.xhtml
+++ b/src/main/webapp/Paginas/facturaventa/Create.xhtml
@@ -17,7 +17,9 @@
                         <p:outputLabel value="Fecha de vencimiento de pago: " for="fechaVencimientoPago" />
                         <p:calendar class="form-text" id="fechaVencimientoPago" pattern="MM/dd/yyyy" value="#{facturaventaController.selected.fechaVencimientoPago}" title="#{bundle.EditFacturaventaTitle_fechaVencimientoPago}" required="true" requiredMessage="#{bundle.EditFacturaventaRequiredMessage_fechaVencimientoPago}" showOn="button"/>
                         <p:outputLabel value="Descripción: " for="descripcion" />
-                        <p:inputText class="form-text" id="descripcion" value="#{facturaventaController.selected.descripcion}" title="#{bundle.CreateFacturaventaTitle_descripcion}" required="true" requiredMessage="#{bundle.CreateFacturaventaRequiredMessage_descripcion}"/>
+                        <p:inputText class="form-text" id="descripcion" value="#{facturaventaController.selected.descripcion}" title="#{bundle.CreateFacturaventaTitle_descripcion}" required="true" requiredMessage="#{bundle.CreateFacturaventaRequiredMessage_descripcion}">
+                            <f:validator validatorId="letrasValidator" />
+                                  </p:inputText>
                         <p:outputLabel value="Id de pago: " for="pagoid" />
                         <p:selectOneMenu class="form-text" id="pagoid" value="#{facturaventaController.selected.pagoid}" >
                             <f:selectItems value="#{pagoventaController.itemsAvailableSelectOne}"
