--- a/src/main/webapp/Paginas/ganancia/Edit.xhtml
+++ b/src/main/webapp/Paginas/ganancia/Edit.xhtml
@@ -13,7 +13,9 @@
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{gananciaController.selected != null}">
                         <p:outputLabel value="Porcentaje: " for="porcentaje" />
-                        <p:inputText class="form-control" id="porcentaje" value="#{gananciaController.selected.porcentaje}" title="#{bundle.EditGananciaTitle_porcentaje}" required="true" requiredMessage="#{bundle.EditGananciaRequiredMessage_porcentaje}"/>
+                        <p:inputText class="form-control" id="porcentaje" value="#{gananciaController.selected.porcentaje}" title="#{bundle.EditGananciaTitle_porcentaje}" required="true" requiredMessage="#{bundle.EditGananciaRequiredMessage_porcentaje}">
+                               <f:validator validatorId="numerosValidator" />
+                                        </p:inputText>
                         <p:outputLabel value="Id de producto: " for="productoid" />
                         <p:selectOneMenu id="productoid" value="#{gananciaController.selected.productoid}" required="true" requiredMessage="#{bundle.EditGananciaRequiredMessage_productoid}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
