--- a/src/main/webapp/Paginas/ordenventa/Create.xhtml
+++ b/src/main/webapp/Paginas/ordenventa/Create.xhtml
@@ -15,15 +15,25 @@
                         <p:outputLabel value="Fecha de venta: " for="fechaVenta" />
                         <p:calendar id="fechaVenta" pattern="MM/dd/yyyy" value="#{ordenventaController.selected.fechaVenta}" title="#{bundle.EditOrdenventaTitle_fechaVenta}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_fechaVenta}" showOn="button"/>
                         <p:outputLabel value="#{bundle.CreateOrdenventaLabel_status}" for="status" />
-                        <p:inputText id="status" value="#{ordenventaController.selected.status}" title="#{bundle.CreateOrdenventaTitle_status}" required="true" requiredMessage="#{bundle.CreateOrdenventaRequiredMessage_status}"/>
+                        <p:inputText id="status" value="#{ordenventaController.selected.status}" title="#{bundle.CreateOrdenventaTitle_status}" required="true" requiredMessage="#{bundle.CreateOrdenventaRequiredMessage_status}">
+                             <f:validator validatorId="letrasValidator" />
+                                        </p:inputText>
                         <p:outputLabel value="#{bundle.CreateOrdenventaLabel_iva}" for="iva" />
-                        <p:inputText id="iva" value="#{ordenventaController.selected.iva}" title="#{bundle.CreateOrdenventaTitle_iva}" required="true" requiredMessage="#{bundle.CreateOrdenventaRequiredMessage_iva}"/>
+                        <p:inputText id="iva" value="#{ordenventaController.selected.iva}" title="#{bundle.CreateOrdenventaTitle_iva}" required="true" requiredMessage="#{bundle.CreateOrdenventaRequiredMessage_iva}">
+                              <f:validator validatorId="numerosValidator" />
+                                        </p:inputText>
                         <p:outputLabel value="#{bundle.CreateOrdenventaLabel_subtotal}" for="subtotal" />
-                        <p:inputText id="subtotal" value="#{ordenventaController.selected.subtotal}" title="#{bundle.CreateOrdenventaTitle_subtotal}" required="true" requiredMessage="#{bundle.CreateOrdenventaRequiredMessage_subtotal}"/>
+                        <p:inputText id="subtotal" value="#{ordenventaController.selected.subtotal}" title="#{bundle.CreateOrdenventaTitle_subtotal}" required="true" requiredMessage="#{bundle.CreateOrdenventaRequiredMessage_subtotal}">
+                              <f:validator validatorId="numerosValidator" />
+                                        </p:inputText>
                         <p:outputLabel value="#{bundle.CreateOrdenventaLabel_total}" for="total" />
-                        <p:inputText id="total" value="#{ordenventaController.selected.total}" title="#{bundle.CreateOrdenventaTitle_total}" required="true" requiredMessage="#{bundle.CreateOrdenventaRequiredMessage_total}"/>
+                        <p:inputText id="total" value="#{ordenventaController.selected.total}" title="#{bundle.CreateOrdenventaTitle_total}" required="true" requiredMessage="#{bundle.CreateOrdenventaRequiredMessage_total}">
+                              <f:validator validatorId="numerosValidator" />
+                                        </p:inputText>
                         <p:outputLabel value="#{bundle.CreateOrdenventaLabel_descripcion}" for="descripcion" />
-                        <p:inputText id="descripcion" value="#{ordenventaController.selected.descripcion}" title="#{bundle.CreateOrdenventaTitle_descripcion}" required="true" requiredMessage="#{bundle.CreateOrdenventaRequiredMessage_descripcion}"/>
+                        <p:inputText id="descripcion" value="#{ordenventaController.selected.descripcion}" title="#{bundle.CreateOrdenventaTitle_descripcion}" required="true" requiredMessage="#{bundle.CreateOrdenventaRequiredMessage_descripcion}">
+                             <f:validator validatorId="letrasValidator" />
+                                        </p:inputText>
                         <p:outputLabel value="Id de cliente: " for="clienteid" />
                         <p:selectOneMenu id="clienteid" value="#{ordenventaController.selected.clienteid}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_clienteid}">
                             <f:selectItems value="#{clienteController.itemsAvailableSelectOne}"
