--- a/src/main/webapp/Paginas/ordenventa/Edit.xhtml
+++ b/src/main/webapp/Paginas/ordenventa/Edit.xhtml
@@ -17,15 +17,25 @@
                         <p:outputLabel value="Fecha de venta:" for="fechaVenta" />
                         <p:calendar id="fechaVenta" pattern="MM/dd/yyyy" value="#{ordenventaController.selected.fechaVenta}" title="#{bundle.EditOrdenventaTitle_fechaVenta}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_fechaVenta}" showOn="button"/>
                         <p:outputLabel value="#{bundle.EditOrdenventaLabel_status}" for="status" />
-                        <p:inputText id="status" value="#{ordenventaController.selected.status}" title="#{bundle.EditOrdenventaTitle_status}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_status}"/>
+                        <p:inputText id="status" value="#{ordenventaController.selected.status}" title="#{bundle.EditOrdenventaTitle_status}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_status}">
+                               <f:validator validatorId="letrasValidator" />
+                                        </p:inputText>
                         <p:outputLabel value="#{bundle.EditOrdenventaLabel_iva}" for="iva" />
-                        <p:inputText id="iva" value="#{ordenventaController.selected.iva}" title="#{bundle.EditOrdenventaTitle_iva}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_iva}"/>
+                        <p:inputText id="iva" value="#{ordenventaController.selected.iva}" title="#{bundle.EditOrdenventaTitle_iva}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_iva}">
+                             <f:validator validatorId="numerosValidator" />
+                                        </p:inputText>
                         <p:outputLabel value="#{bundle.EditOrdenventaLabel_subtotal}" for="subtotal" />
-                        <p:inputText id="subtotal" value="#{ordenventaController.selected.subtotal}" title="#{bundle.EditOrdenventaTitle_subtotal}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_subtotal}"/>
+                        <p:inputText id="subtotal" value="#{ordenventaController.selected.subtotal}" title="#{bundle.EditOrdenventaTitle_subtotal}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_subtotal}">
+                             <f:validator validatorId="numerosValidator" />
+                                        </p:inputText>
                         <p:outputLabel value="#{bundle.EditOrdenventaLabel_total}" for="total" />
-                        <p:inputText id="total" value="#{ordenventaController.selected.total}" title="#{bundle.EditOrdenventaTitle_total}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_total}"/>
+                        <p:inputText id="total" value="#{ordenventaController.selected.total}" title="#{bundle.EditOrdenventaTitle_total}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_total}">
+                             <f:validator validatorId="numerosValidator" />
+                                        </p:inputText>
                         <p:outputLabel value="#{bundle.EditOrdenventaLabel_descripcion}" for="descripcion" />
-                        <p:inputText id="descripcion" value="#{ordenventaController.selected.descripcion}" title="#{bundle.EditOrdenventaTitle_descripcion}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_descripcion}"/>
+                        <p:inputText id="descripcion" value="#{ordenventaController.selected.descripcion}" title="#{bundle.EditOrdenventaTitle_descripcion}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_descripcion}">
+                               <f:validator validatorId="letrasValidator" />
+                                        </p:inputText>
                         <p:outputLabel value="Id de cliente:" for="clienteid" />
                         <p:selectOneMenu id="clienteid" value="#{ordenventaController.selected.clienteid}" required="true" requiredMessage="#{bundle.EditOrdenventaRequiredMessage_clienteid}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
