--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -41,28 +41,28 @@
                         <p:menuitem action="#{login.logout()}" value="LOGOUT"/>
                         <p:menuitem value="Principal" outcome="/index" icon="ui-icon-home"/>
                         <p:submenu label="Modulos">
-                            <p:menuitem value="Cargo" outcome="/Paginas/cargo/List.xhtml" />
-                            <p:menuitem value="Categoria" outcome="/Paginas/categoria/List.xhtml" />
-                            <p:menuitem value="Cliente" outcome="/Paginas/cliente/List.xhtml" />
-                            <p:menuitem value="Compradetalle" outcome="/Paginas/compradetalle/List.xhtml" />
-                            <p:menuitem value="Empleado" outcome="/Paginas/empleado/List.xhtml" />
-                            <p:menuitem value="Facturacompra" outcome="/Paginas/facturacompra/List.xhtml" />
-                            <p:menuitem value="Facturaventa" outcome="/Paginas/facturaventa/List.xhtml" />
-                            <p:menuitem value="Ganancia" outcome="/Paginas/ganancia/List.xhtml" />
-                            <p:menuitem value="Historialtrabajo" outcome="/Paginas/historialtrabajo/List.xhtml" />
-                            <p:menuitem value="Ordencompra" outcome="/Paginas/ordencompra/List.xhtml" />
-                            <p:menuitem value="Ordenventa" outcome="/Paginas/ordenventa/List.xhtml" />
-                            <p:menuitem value="Pagocompra" outcome="/Paginas/pagocompra/List.xhtml" />
-                            <p:menuitem value="Pagoventa" outcome="/Paginas/pagoventa/List.xhtml" />
-                            <p:menuitem value="Persona" outcome="/Paginas/persona/List.xhtml" />
-                            <p:menuitem value="Producto" outcome="/Paginas/producto/List.xhtml" />
-                            <p:menuitem value="Proveedor" outcome="/Paginas/proveedor/List.xhtml" />
-                            <p:menuitem value="Rol" outcome="/Paginas/rol/List.xhtml" />
-                            <p:menuitem value="Tarjetacreditocompra" outcome="/Paginas/tarjetacreditocompra/List.xhtml" />
-                            <p:menuitem value="Tarjetacreditoventa" outcome="/Paginas/tarjetacreditoventa/List.xhtml" />
-                            <p:menuitem value="Usuario" outcome="/Paginas/usuario/List.xhtml" />
-                            <p:menuitem value="Usuariosw" outcome="/Paginas/usuariosw/List.xhtml" />
-                            <p:menuitem value="Ventadetalle" outcome="/Paginas/ventadetalle/List.xhtml" />
+                            <p:menuitem value="Cargo" outcome="/Paginas/cargo/List.xhtml" rendered="#{login.rolRh}"/>
+                            <p:menuitem value="Categoria" outcome="/Paginas/categoria/List.xhtml" rendered="#{login.rolInventario}"/>
+                            <p:menuitem value="Cliente" outcome="/Paginas/cliente/List.xhtml" rendered="#{login.rolRh}" />
+                            <p:menuitem value="Compradetalle" outcome="/Paginas/compradetalle/List.xhtml" rendered="#{login.rolCompras}"/>
+                            <p:menuitem value="Empleado" outcome="/Paginas/empleado/List.xhtml" rendered="#{login.rolRh}"/>
+                            <p:menuitem value="Facturacompra" outcome="/Paginas/facturacompra/List.xhtml" rendered="#{login.rolCompras}"/>
+                            <p:menuitem value="Facturaventa" outcome="/Paginas/facturaventa/List.xhtml" rendered="#{login.rolVentas}"/>
+                            <p:menuitem value="Ganancia" outcome="/Paginas/ganancia/List.xhtml" rendered="#{login.rolAdmin}"/>
+                            <p:menuitem value="Historialtrabajo" outcome="/Paginas/historialtrabajo/List.xhtml" rendered="#{login.rolRh}"/>
+                            <p:menuitem value="Ordencompra" outcome="/Paginas/ordencompra/List.xhtml" rendered="#{login.rolCompras}"/>
+                            <p:menuitem value="Ordenventa" outcome="/Paginas/ordenventa/List.xhtml" rendered="#{login.rolVentas}"/>
+                            <p:menuitem value="Pagocompra" outcome="/Paginas/pagocompra/List.xhtml" rendered="#{login.rolCompras}"/>
+                            <p:menuitem value="Pagoventa" outcome="/Paginas/pagoventa/List.xhtml" rendered="#{login.rolVentas}"/>
+                            <p:menuitem value="Persona" outcome="/Paginas/persona/List.xhtml" rendered="#{login.rolRh}"/>
+                            <p:menuitem value="Producto" outcome="/Paginas/producto/List.xhtml" rendered="#{login.rolInventario}"/>
+                            <p:menuitem value="Proveedor" outcome="/Paginas/proveedor/List.xhtml" rendered="#{login.rolRh}"/>
+                            <p:menuitem value="Rol" outcome="/Paginas/rol/List.xhtml" rendered="#{login.rolRh}"/>
+                            <p:menuitem value="Tarjetacreditocompra" outcome="/Paginas/tarjetacreditocompra/List.xhtml" rendered="#{login.rolCompras}"/>
+                            <p:menuitem value="Tarjetacreditoventa" outcome="/Paginas/tarjetacreditoventa/List.xhtml" rendered="#{login.rolVentas}"/>
+                            <p:menuitem value="Usuario" outcome="/Paginas/usuario/List.xhtml" rendered="#{login.rolRh}"/>
+                            <p:menuitem value="Usuariosw" outcome="/Paginas/usuariosw/List.xhtml" rendered="#{login.rolAdmin}"/>
+                            <p:menuitem value="Ventadetalle" outcome="/Paginas/ventadetalle/List.xhtml" rendered="#{login.rolVentas}"/>
                         </p:submenu>
                     </p:menubar>
                 </h:form>
