--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -54,6 +54,8 @@
         <h:link outcome="/Paginas/usuariosw/List" value="Show All Usuariosw Items"/>
         <br />
         <h:link outcome="/Paginas/ventadetalle/List" value="Show All Ventadetalle Items"/>
+        <br/>
+          <h:link outcome="/Paginas/graficas/graficas" value="Show All Grafics Items"/>
      
     </h:body>
 </html>
