--- a/src/main/webapp/secured/admin/index.xhtml
+++ b/src/main/webapp/secured/admin/index.xhtml
@@ -55,7 +55,9 @@
         <h:link outcome="/Paginas/usuariosw/List" value="Show All Usuariosw Items"/>
         <br />
         <h:link outcome="/Paginas/ventadetalle/List" value="Show All Ventadetalle Items"/>
-     
+        <br />
+        <h:link outcome="/Paginas/graficas/graficas" value="graficas"/>
+      
     </h:body>
 
 
