--- a/src/main/webapp/Paginas/pagoventa/Create.xhtml
+++ b/src/main/webapp/Paginas/pagoventa/Create.xhtml
@@ -15,9 +15,15 @@
                         <p:outputLabel value="Fecha de pago: " for="fechaPago" />
                         <p:calendar id="fechaPago" pattern="MM/dd/yyyy" value="#{pagoventaController.selected.fechaPago}" title="#{bundle.EditPagoventaTitle_fechaPago}" required="true" requiredMessage="#{bundle.EditPagoventaRequiredMessage_fechaPago}" showOn="button"/>
                         <p:outputLabel value="#{bundle.CreatePagoventaLabel_monto}" for="monto" />
-                        <p:inputText id="monto" value="#{pagoventaController.selected.monto}" title="#{bundle.CreatePagoventaTitle_monto}" required="true" requiredMessage="#{bundle.CreatePagoventaRequiredMessage_monto}"/>
+                        <p:inputText id="monto" value="#{pagoventaController.selected.monto}" title="#{bundle.CreatePagoventaTitle_monto}" required="true" requiredMessage="#{bundle.CreatePagoventaRequiredMessage_monto}">
+                             <f:validator validatorId="numerosValidator" />
+                        </p:inputText>
+                        
                         <p:outputLabel value="#{bundle.CreatePagoventaLabel_estado}" for="estado" />
-                        <p:inputText id="estado" value="#{pagoventaController.selected.estado}" title="#{bundle.CreatePagoventaTitle_estado}" required="true" requiredMessage="#{bundle.CreatePagoventaRequiredMessage_estado}"/>
+                        <p:inputText id="estado" value="#{pagoventaController.selected.estado}" title="#{bundle.CreatePagoventaTitle_estado}" required="true" requiredMessage="#{bundle.CreatePagoventaRequiredMessage_estado}">
+                            <f:validator validatorId="letrasValidator" />
+                        </p:inputText>
+                        
                         <p:outputLabel value="Id de tarjeta:" for="tarjetacreditoid" />
                         <p:selectOneMenu id="tarjetacreditoid" value="#{pagoventaController.selected.tarjetacreditoid}" required="true" requiredMessage="#{bundle.EditPagoventaRequiredMessage_tarjetacreditoid}">
                             <f:selectItems value="#{tarjetacreditoventaController.itemsAvailableSelectOne}"
