--- a/src/main/webapp/Paginas/usuario/Create.xhtml
+++ b/src/main/webapp/Paginas/usuario/Create.xhtml
@@ -15,9 +15,13 @@
                     <h:panelGroup>
                         <p:panelGrid id="grid" columns="2" rendered="#{usuarioController.selected != null}">
                             <p:outputLabel value="#{bundle.CreateUsuarioLabel_email}" for="email" />
-                            <p:inputText id="email" value="#{usuarioController.selected.email}" title="#{bundle.CreateUsuarioTitle_email}" required="true" requiredMessage="#{bundle.CreateUsuarioRequiredMessage_email}"/>
+                            <p:inputText id="email" value="#{usuarioController.selected.email}" title="#{bundle.CreateUsuarioTitle_email}" required="true" requiredMessage="#{bundle.CreateUsuarioRequiredMessage_email}">
+                                <f:validator validatorId="emailValidator" />
+                        </p:inputText>
+                            
                             <h:outputLabel for="pwd1" value="Contraseña: *" />
                             <p:password id="pwd1" value="#{usuarioController.selected.contrasenia}" feedback="false" match="pwd2" label="Password 1" required="true"/>
+                            
                             <h:outputLabel for="pwd2" value="Confirme contraseña: *" />
                             <p:password id="pwd2" value="#{usuarioController.pass2}" feedback="false" label="Password 2" required="true"/>
                         </p:panelGrid>
