Correccion de etiquetas meta

--- a/src/main/webapp/template_login.xhtml
+++ b/src/main/webapp/template_login.xhtml
@@ -23,6 +23,8 @@
     </h:head>
 
     <h:body style="background-color:#F0F0F0">
+        
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://apis.google.com"></meta>
 
         <ui:insert name="body">
 
