--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -27,6 +27,8 @@
     </h:head>
 
     <h:body>
+        
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://apis.google.com"></meta>
 
         <p:growl id="growl" life="3000" />
 
